--- a/prometheus/kube-state-metrics.yml
+++ b/prometheus/kube-state-metrics.yml
@@ -16,7 +16,7 @@ spec:
   selector:
     app: kube-state-metrics
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kube-state-metrics
@@ -25,15 +25,35 @@ metadata:
     app: kube-state-metrics
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: kube-state-metrics
   template:
     metadata:
-      name: kube-state-metrics-main
       labels:
         app: kube-state-metrics
     spec:
       containers:
-        - name: kube-state-metrics
-          image: quay.io/coreos/kube-state-metrics:latest
-          ports:
-          - containerPort: 8080
-            name: metrics
+      - name: kube-state-metrics
+        image: quay.io/coreos/kube-state-metrics:latest
+        ports:
+        - containerPort: 8080
+          name: metrics
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
+        # Liveness probe (ajuste conforme necessário)
+        # livenessProbe:
+        #   httpGet:
+        #     path: /healthz
+        #     port: 8080
+        # Readiness probe (ajuste conforme necessário)
+        # readinessProbe:
+        #   httpGet:
+        #     path: /healthz
+        #     port: 8080
+
